[gd_scene load_steps=5 format=3 uid="uid://36l64vphhwy0"]

[ext_resource type="Material" uid="uid://xg6h5gdeg71v" path="res://materials/material_unshaded.tres" id="1_0ts67"]
[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="2_7qdxv"]
[ext_resource type="AudioStream" uid="uid://dv1htoa82gn2i" path="res://audio/bell.mp3" id="3_beoh7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skbn8"]
bg_color = Color(0.127004, 0.669873, 0.766421, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[node name="SettingsMenu" type="PanelContainer"]
process_mode = 2
z_index = 10
material = ExtResource("1_0ts67")
offset_left = 82.0
offset_top = 30.0
offset_right = 1072.0
offset_bottom = 628.0
script = ExtResource("2_7qdxv")

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 2
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="LabelSettings" type="Label" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_skbn8")
text = "Asetukset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelVolume" type="Label" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Musiikki"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSliderMusic" type="HSlider" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="LabelEffects" type="Label" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Ääni efektit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSliderEffects" type="HSlider" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="ButtonClose" type="Button" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Valmis"

[node name="AudioCharacterArrive" type="AudioStreamPlayer" parent="."]
process_mode = 3
editor_description = "https://freesound.org/people/Zabuhailo/sounds/242409/
CC 4.0"
stream = ExtResource("3_beoh7")
volume_db = -4.0
bus = &"Effects"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSliderMusic" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSliderEffects" to="." method="_on_h_slider_effects_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
